--- a/about.css
+++ b/about.css
@@ -162,6 +162,7 @@ margin-top:1.4rem;
 }
 .team_member p{
     margin-bottom:1.5rem;
+    font-size:0.5rem;
 }
 .team_member h4{
     font-size:1rem;
